Git_WGBH_QC/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ACCOUNT_ID_FDNDEV__c</fullName>
        <label>ACCOUNT_ID_FDNDEV</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCOUNT_ID_LEADS__c</fullName>
        <description>Automatic assign this number when a lead is created, map this field from Leads to Accounts starting with an L-and 9 digits, zero filled, 10 characters all together.</description>
        <inlineHelpText>Automatic assign this number when a lead is created, map this field from Leads to Accounts starting with an L-and 9 digits, zero filled, 10 characters all together.</inlineHelpText>
        <label>ACCOUNT_ID_LEADS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCOUNT_ID_PBSD__c</fullName>
        <label>ACCOUNT_ID_PBSD</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AboutUs__c</fullName>
        <description>AboutUs field added for Business Member Partners</description>
        <label>AboutUs</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AccountCategoryValue__c</fullName>
        <label>Account Category Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountCategory__c</fullName>
        <description>TA Account Category</description>
        <label>Account Category</label>
        <picklist>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccountTypeValue__c</fullName>
        <label>Account Type Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountType__c</fullName>
        <description>TA Account Type</description>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Association/Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney/Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Childcare/Preschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial TV Station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Local Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate National Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation acting as an Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation- Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation- Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Government Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual as a Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual as a Personal Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-size Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary School</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Alpha_Name__c</fullName>
        <label>Account Alpha Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID_Auction__c</fullName>
        <label>Account ID Auction</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID_Cars__c</fullName>
        <label>Account ID Cars</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID_Convio__c</fullName>
        <label>Account ID Convio</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <description>Major Gift Account Manager who deals with this organization.</description>
        <inlineHelpText>Major Gift Account Manager who deals with this organization.</inlineHelpText>
        <label>Major Gift Acct Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acquired_Date__c</fullName>
        <label>Acquired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acquired_Source__c</fullName>
        <label>Acquired Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <inlineHelpText>By checking this box you activate the Member Discount Offer on the WGBH Web Site</inlineHelpText>
        <label>Active Offer on WGBH Site</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Phone__c</fullName>
        <label>Additional Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>Affiliation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Giving_Level__c</fullName>
        <inlineHelpText>Annual Giving Level on the household.</inlineHelpText>
        <label>Annual Giving Level</label>
        <picklist>
            <picklistValues>
                <fullName>Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Anonymous_Gift_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymous Gift Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AreaCode__c</fullName>
        <description>Area Code</description>
        <label>Area Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <inlineHelpText>Assigned to Name for Volunteer when printing out a list of leads to be worked</inlineHelpText>
        <label>Volunteer Assigned To</label>
        <picklist>
            <picklistValues>
                <fullName>Barbara Freer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbara Randolph</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Hodges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cindy Crosby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Atwereboanda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debra Levin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joyce Schwartz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judy Schults</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karin Robinson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerridan Ann Murphy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Larry Stuart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michelle Clancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mike Owen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nilagia McCoy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patricia McMahon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandra Davidow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steve Wasserman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Susan Aron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terri Angeli</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benefit_Level_Package__c</fullName>
        <inlineHelpText>Level of Package awarded for Partnership</inlineHelpText>
        <label>Benefit Package Level</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BriefName__c</fullName>
        <description>TA Alias name</description>
        <label>Brief Name</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <description>Phone number for contact at place of work.</description>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CarrierRoute__c</fullName>
        <description>TA Carrier Route</description>
        <label>Carrier Route</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Giving__c</fullName>
        <label>Count of Giving</label>
        <summaryFilterItems>
            <field>Opportunity.schedule_start_date__c</field>
            <operation>greaterOrEqual</operation>
            <value>11/5/2011</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.schedule_start_date__c</field>
            <operation>lessThan</operation>
            <value>12/5/2011</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>Blank</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Rating__c</fullName>
        <description>Used by Major Gifts to determine the rating of a Household</description>
        <label>External Rating</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FirstDonationDate__c</fullName>
        <label>First Donation Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Amount</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_Gift_Date__c</fullName>
        <label>First Gift Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Formula_MailingAddress__c</fullName>
        <formula>MailingStreet__c &amp; BR() &amp;
MailingCity__c &amp; &quot;, &quot; &amp; MailingState__c &amp; &quot; &quot; &amp; MailingPostalCode__c
&amp; if (LEN(MailingCountry__c)&gt;0,BR()&amp;MailingCountry__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Type__c</fullName>
        <label>Gift Type</label>
        <picklist>
            <picklistValues>
                <fullName>Additional Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade Sustainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Sustainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejoin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reset Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Pledge Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade/Reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Giving Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Sustainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade to Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade to Mid-level</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Giving_Segment__c</fullName>
        <label>Giving Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murrow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murrow Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Air Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ralph Lowell Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Donation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Great_Blue_Hill_Society__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Great Blue Hill Society</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Household_Email_2__c</fullName>
        <label>Household Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Household_Email_3__c</fullName>
        <label>Household Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Household_Email__c</fullName>
        <label>Household Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Household_ID__c</fullName>
        <label>Household ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Phone__c</fullName>
        <label>Household Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Industry_Category__c</fullName>
        <label>Industry Category</label>
        <picklist>
            <controllingField>Industry</controllingField>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adventure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antiques/Collectibles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art/Galleries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar/Recreational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cafe/Eaterie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carribean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering/Event Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Childcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children/Maternity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College/University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Classes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Unions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culinary/Kitchen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culinary Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultural Institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink/Water/Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics/Computers/Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastDonationDate__c</fullName>
        <label>Last Donation Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Amount</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Account_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Account ID</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LifetimeDonationHistory_Amount__c</fullName>
        <label>Lifetime Donation History (Amount)</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LifetimeDonationHistory_Number__c</fullName>
        <label>Lifetime Donation History (Number)</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Amount</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Logo_Url__c</fullName>
        <description>This is the URL for the logo. This field is automatically populated by the image upload.</description>
        <inlineHelpText>This is the URL for the logo. This field is automatically populated by the image upload.</inlineHelpText>
        <label>Logo Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <label>Logo</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MMI_Account_Manager__c</fullName>
        <inlineHelpText>Corporate Marketing (MMI)</inlineHelpText>
        <label>Corp Mktg-Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMI_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Member Marketing Initiative Group do not call</description>
        <inlineHelpText>If this box is checked do not call because there is a relationship in local corporate.</inlineHelpText>
        <label>MMI Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMI_Manager__c</fullName>
        <inlineHelpText>The Manager assigned the the MMI Account Manager and MMI Volunteer</inlineHelpText>
        <label>Corp Mktg Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMI_Staff__c</fullName>
        <inlineHelpText>The staff assigned to work with the Organization, Member Discount Organ or the MMI Volunteer</inlineHelpText>
        <label>MMI Staff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <label>Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <label>Mailing Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <label>Mailing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <label>Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_PostalCode__c</fullName>
        <formula>Preferred_Address__r.Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing PostalCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <formula>Preferred_Address__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State_del__c</fullName>
        <formula>Preferred_Address__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MatchRatio__c</fullName>
        <description>Corporate Match Ratio</description>
        <label>Match Ratio</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxContribution__c</fullName>
        <description>Maximum Contribution</description>
        <label>Max Contribution</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxMatched__c</fullName>
        <description>Maximum Matched</description>
        <label>Maximum Matched</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Discount_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Participates in a member discount offer</description>
        <inlineHelpText>Check this box if this organization participates in a member discount offer</inlineHelpText>
        <label>Member Discount Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Number__c</fullName>
        <formula>IF(TaAccountId__c &gt; 0, TEXT(TaAccountId__c),SFDC_ACCOUNT_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Station__c</fullName>
        <label>Member Station</label>
        <picklist>
            <picklistValues>
                <fullName>WGBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academy of Music</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>